# kratos_rs

./: Cargo.toml  LICENSE  README.md  build.rs
api/: Cargo.toml
api/src/: lib.rs
api/src/hello/: mod.rs
api/src/hello/v1/: grpc.rs  http.rs  mod.rs  response.rs
biz/: Cargo.toml
biz/src/: hello.rs
config/: default.json  default.yaml  dev.json
configs/: Cargo.toml
configs/src/: db.rs  lib.rs
constant/: Cargo.toml
constant/src/: lib.rs
data/: Cargo.toml
data/src/: hello.rs  lib.rs
kratos_core_rs/: Cargo.toml
kratos_core_rs/src/core/: logs.rs  mod.rs
kratos_core_rs/src/core/server/: axum.rs
kratos_core_rs/src/error/: mod.rs
proto/api/hello/: greeter.proto
proto/api/v1/echo/: echo.proto
proto/api/v1/hello/: greeter.proto
proto/public/: public.proto
protos/: Cargo.toml
protos/src/: lib.rs  proto.pb  public.rs
service/: Cargo.toml
service/src/: hello.rs  lib.rs
src/: main.rs  wire.rs
src/api/: README.md  mod.rs
src/api/hello/: mod.rs  response.rs
src/api/hello/v1/: grpc.rs  http.rs  mod.rs
src/api/v1/: mod.rs
src/api/v1/hello/: mod.rs  requset.rs
src/biz/: hello.rs
src/config/: mod.rs
src/data/: hello.rs  mod.rs
src/libs/core/: app.rs  log.rs  mod.rs
src/proto/: echo.v1.rs  helloworld.v1.rs  mod.rs  proto.pb
src/routers/: mod.rs
src/server/: grpc.rs  mod.rs
src/service/: hello.rs  mod.rs
utils/: Cargo.toml
utils/src/: id.rs  lib.rs
