[package]
name = "biz"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kratos_core_rs = {path = "../kratos_core_rs"}
data = {path = "../data"}


serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
serde_yaml = "0.9.14"