[package]
name = "data"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kratos_core_rs = {path = "../kratos_core_rs"}
configs = {path = "../configs"}

sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
chrono = {version = "0.4.24", features = ["serde"]}

# 日志
tracing = "0.1"

serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"