[package]
name = "protos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# grpc 生成
prost = "0.11"
prost-types = "0.11"


# GRPC Toic GRPC服务
tonic = "0.9.2"
http-body = "0.4.5"
http = "0.2.9"
tower = "0.4.13"
futures = "0.3.28"
tonic-reflection = "0.9.2"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
chrono = {version = "0.4.24", features = ["serde"]}