[package]
name = "service"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kratos_core_rs = {path = "../kratos_core_rs"}
configs = {path = "../configs"}
data = {path = "../data"}
biz = {path = "../biz"}
constant = {path = "../constant"}

axum = { version = "0.6.4", features = ["headers"]}

